--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -248,40 +248,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{\n",
-       "    \"name\": \"aimedibot\",\n",
-       "    \"metric\": \"cosine\",\n",
-       "    \"host\": \"aimedibot-vlu0e9n.svc.aped-4627-b74a.pinecone.io\",\n",
-       "    \"spec\": {\n",
-       "        \"serverless\": {\n",
-       "            \"cloud\": \"aws\",\n",
-       "            \"region\": \"us-east-1\"\n",
-       "        }\n",
-       "    },\n",
-       "    \"status\": {\n",
-       "        \"ready\": true,\n",
-       "        \"state\": \"Ready\"\n",
-       "    },\n",
-       "    \"vector_type\": \"dense\",\n",
-       "    \"dimension\": 384,\n",
-       "    \"deletion_protection\": \"disabled\",\n",
-       "    \"tags\": null\n",
-       "}"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Pritha\\anaconda3\\envs\\medibot\\Lib\\site-packages\\pinecone\\data\\index.py:1: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from tqdm.autonotebook import tqdm\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'Pinecone' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpinecone\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m pinecone, ServerlessSpec\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Create a Pinecone client instance\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m pc \u001b[38;5;241m=\u001b[39m Pinecone(api_key \u001b[38;5;241m=\u001b[39m PINECONE_API_KEY)\n\u001b[0;32m      7\u001b[0m index_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maimedibot\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# Create an index\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Pinecone' is not defined"
+     ]
     }
    ],
    "source": [
     "from langchain_pinecone import PineconeVectorStore\n",
+    "from pinecone import Pinecone, ServerlessSpec\n",
     "\n",
     "# Create a Pinecone client instance\n",
     "pc = Pinecone(api_key = PINECONE_API_KEY)\n",
